# geoPromptRunner

./: .env.example  .gitignore  .mcp.json  README.md  answers.md  pyproject.toml  requirements.txt  run-api.sh
.claude/: settings.json
data/: fort_audit.csv  fort_audit_search.csv  fort_audit_thin.csv  fort_gold.json  grade_situations.json  grade_situations_abhi.json  oura_gold.json  oura_queries_v1.json  oura_thin_12.json  payload_log_oura.jsonl  payload_log_oura_r2.jsonl  sample_gold.json  sample_grade_situations.json  sample_queries.json  sample_rubric.json  schema.sql  schema_audits.sql  schema_content_judge_cache.sql  schema_judge_cache.sql  schema_site_audit.sql  schema_teasers.sql  schema_ui.sql  schema_v2.sql  schema_v3.sql  schema_v5.sql  smoke_queries.json
docs/: answers.md  auditGenerator.md  build-log.md  calibration-generalization-plan.md  claude.md  design-and-decisions.md  engine-gap-analysis.md  fact-sheet-anoria.md  fact-sheet-example-oura.md  fact-sheet-fort.md  fact-sheet-oura.md  fact-sheet-template.md  fort-competitors.md  fort-labeling-sheet.md  gold-set-example.csv  gold-set-template.csv  gold-set-template.json  grade-calibration-guide.md  grade-sheet-fort.md  grade-sheet-oura.md  isolation-determinism-plan.md  judge-accuracy-plan.md  labeling-guide.md  left.md  oura-labeling-sheet.md  oura-query-set-v1-draft.md  project-queue.md  project.md  query-generation-plan.md  report.md  showcase-session-core-build.md  site-audit-agent-plan.md  site-audit-implementation-guide.md  subscription-judge-plan.md  ui-plan.md
scripts/: backfill_gemini.py  (+16 more)
(+191 files in other folders)
