[project]
name = "geo-measurement-platform"
version = "0.1.0"
description = "Data pipeline and audit tool measuring brand visibility in AI-generated answers."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
